istio-cni-daemoset-from-lens-ui.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: istio-cni-node
  namespace: istio-system
  uid: 43618570-9520-44d2-8eef-b23eb382f70d
  resourceVersion: '703'
  generation: 1
  creationTimestamp: '2024-10-08T16:31:53Z'
  labels:
    install.operator.istio.io/owning-resource: installed-state
    install.operator.istio.io/owning-resource-namespace: istio-system
    istio.io/rev: default
    k8s-app: istio-cni-node
    operator.istio.io/component: Cni
    operator.istio.io/managed: Reconcile
    operator.istio.io/version: 1.23.1
    release: istio
  annotations:
    deprecated.daemonset.template.generation: '1'
  managedFields:
    - manager: istio-operator
      operation: Apply
      apiVersion: apps/v1
      time: '2024-10-08T16:31:53Z'
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:labels:
            f:install.operator.istio.io/owning-resource: {}
            f:install.operator.istio.io/owning-resource-namespace: {}
            f:istio.io/rev: {}
            f:k8s-app: {}
            f:operator.istio.io/component: {}
            f:operator.istio.io/managed: {}
            f:operator.istio.io/version: {}
            f:release: {}
        f:spec:
          f:selector: {}
          f:template:
            f:metadata:
              f:annotations:
                f:prometheus.io/path: {}
                f:prometheus.io/port: {}
                f:prometheus.io/scrape: {}
                f:sidecar.istio.io/inject: {}
              f:labels:
                f:istio.io/dataplane-mode: {}
                f:k8s-app: {}
                f:sidecar.istio.io/inject: {}
            f:spec:
              f:containers:
                k:{"name":"install-cni"}:
                  .: {}
                  f:args: {}
                  f:command: {}
                  f:env:
                    k:{"name":"GOMAXPROCS"}:
                      .: {}
                      f:name: {}
                      f:valueFrom:
                        f:resourceFieldRef: {}
                    k:{"name":"GOMEMLIMIT"}:
                      .: {}
                      f:name: {}
                      f:valueFrom:
                        f:resourceFieldRef: {}
                    k:{"name":"NODE_NAME"}:
                      .: {}
                      f:name: {}
                      f:valueFrom:
                        f:fieldRef: {}
                    k:{"name":"POD_NAME"}:
                      .: {}
                      f:name: {}
                      f:valueFrom:
                        f:fieldRef: {}
                    k:{"name":"POD_NAMESPACE"}:
                      .: {}
                      f:name: {}
                      f:valueFrom:
                        f:fieldRef: {}
                    k:{"name":"REPAIR_NODE_NAME"}:
                      .: {}
                      f:name: {}
                      f:valueFrom:
                        f:fieldRef: {}
                    k:{"name":"REPAIR_RUN_AS_DAEMON"}:
                      .: {}
                      f:name: {}
                      f:value: {}
                    k:{"name":"REPAIR_SIDECAR_ANNOTATION"}:
                      .: {}
                      f:name: {}
                      f:value: {}
                  f:envFrom: {}
                  f:image: {}
                  f:name: {}
                  f:readinessProbe:
                    f:httpGet:
                      f:path: {}
                      f:port: {}
                  f:resources:
                    f:requests:
                      f:cpu: {}
                      f:memory: {}
                  f:securityContext:
                    f:capabilities:
                      f:add: {}
                      f:drop: {}
                    f:privileged: {}
                    f:runAsGroup: {}
                    f:runAsNonRoot: {}
                    f:runAsUser: {}
                  f:volumeMounts:
                    k:{"mountPath":"/host/etc/cni/net.d"}:
                      .: {}
                      f:mountPath: {}
                      f:name: {}
                    k:{"mountPath":"/host/opt/cni/bin"}:
                      .: {}
                      f:mountPath: {}
                      f:name: {}
                    k:{"mountPath":"/host/proc"}:
                      .: {}
                      f:mountPath: {}
                      f:name: {}
                      f:readOnly: {}
                    k:{"mountPath":"/var/run/istio-cni"}:
                      .: {}
                      f:mountPath: {}
                      f:name: {}
              f:nodeSelector: {}
              f:priorityClassName: {}
              f:serviceAccountName: {}
              f:terminationGracePeriodSeconds: {}
              f:tolerations: {}
              f:volumes:
                k:{"name":"cni-bin-dir"}:
                  .: {}
                  f:hostPath:
                    f:path: {}
                  f:name: {}
                k:{"name":"cni-host-procfs"}:
                  .: {}
                  f:hostPath:
                    f:path: {}
                    f:type: {}
                  f:name: {}
                k:{"name":"cni-net-dir"}:
                  .: {}
                  f:hostPath:
                    f:path: {}
                  f:name: {}
                k:{"name":"cni-netns-dir"}:
                  .: {}
                  f:hostPath:
                    f:path: {}
                    f:type: {}
                  f:name: {}
                k:{"name":"cni-socket-dir"}:
                  .: {}
                  f:hostPath:
                    f:path: {}
                  f:name: {}
          f:updateStrategy:
            f:rollingUpdate:
              f:maxUnavailable: {}
            f:type: {}
    - manager: kube-controller-manager
      operation: Update
      apiVersion: apps/v1
      time: '2024-10-08T16:32:03Z'
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:currentNumberScheduled: {}
          f:desiredNumberScheduled: {}
          f:numberAvailable: {}
          f:numberReady: {}
          f:observedGeneration: {}
          f:updatedNumberScheduled: {}
      subresource: status
  selfLink: /apis/apps/v1/namespaces/istio-system/daemonsets/istio-cni-node
status:
  currentNumberScheduled: 1
  numberMisscheduled: 0
  desiredNumberScheduled: 1
  numberReady: 1
  observedGeneration: 1
  updatedNumberScheduled: 1
  numberAvailable: 1
spec:
  selector:
    matchLabels:
      k8s-app: istio-cni-node
  template:
    metadata:
      creationTimestamp: null
      labels:
        istio.io/dataplane-mode: none
        k8s-app: istio-cni-node
        sidecar.istio.io/inject: 'false'
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: '15014'
        prometheus.io/scrape: 'true'
        sidecar.istio.io/inject: 'false'
    spec:
      volumes:
        - name: cni-bin-dir
          hostPath:
            path: /opt/cni/bin
            type: ''
        - name: cni-host-procfs
          hostPath:
            path: /proc
            type: Directory
        - name: cni-net-dir
          hostPath:
            path: /etc/cni/net.d
            type: ''
        - name: cni-socket-dir
          hostPath:
            path: /var/run/istio-cni
            type: ''
        - name: cni-netns-dir
          hostPath:
            path: /var/run/netns
            type: DirectoryOrCreate
      containers:
        - name: install-cni
          image: docker.io/istio/install-cni:1.23.1
          command:
            - install-cni
          args:
            - '--log_output_level=info'
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          volumeMounts:
            - name: cni-bin-dir
              mountPath: /host/opt/cni/bin
            - name: cni-host-procfs
              readOnly: true
              mountPath: /host/proc
            - name: cni-net-dir
              mountPath: /host/etc/cni/net.d
            - name: cni-socket-dir
              mountPath: /var/run/istio-cni
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8000
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - NET_RAW
                - SYS_ADMIN
              drop:
                - ALL
            privileged: true
            runAsUser: 0
            runAsGroup: 0
            runAsNonRoot: false
      restartPolicy: Always
      terminationGracePeriodSeconds: 5
      dnsPolicy: ClusterFirst
      nodeSelector:
        kubernetes.io/os: linux
      serviceAccountName: istio-cni
      serviceAccount: istio-cni
      securityContext: {}
      schedulerName: default-scheduler
      tolerations:
        - operator: Exists
          effect: NoSchedule
        - key: CriticalAddonsOnly
          operator: Exists
        - operator: Exists
          effect: NoExecute
      priorityClassName: system-node-critical
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  revisionHistoryLimit: 10
